--- a/components/footer.html
+++ b/components/footer.html
@@ -28,9 +28,7 @@
           satisfaction and sustaining long term and profitable relationship with
           client and adding value to their business.
         </p>
-        <p class="text-gray-400 text-xs">
-          SKT GROUP – Designed by Indranil Kanjilal
-        </p>
+        <p class="text-gray-400 text-xs">SKT GROUP – Designed by tomcatdev</p>
       </div>
 
       <!-- Quick Links -->
